📱  Fix misplaced gallery-controls on mobile

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -844,7 +844,7 @@ h2 {
 
       & .gir-gallery__control {
         top: 100%;
-        margin-bottom: -95px;
+        margin-bottom: -65px;
         height: 38px;
         width: 38px;
 
@@ -854,14 +854,14 @@ h2 {
 
         &.gir-gallery__control--right,
         &.gir-gallery__control--back {
-          margin-bottom: -50px;
+          margin-bottom: -20px;
           right: calc(50% - 43px);
           margin-left: -1px;
         }
         
         &.gir-gallery__control--left ~ .gir-gallery__control--right,
         &.gir-gallery__control--left ~ .gir-gallery__control--back {
-          margin-bottom: -95px !important;
+          margin-bottom: -65px !important;
           margin-left: 0 !important;
         }
 
